--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     </script>
 
     <script type="module" src="thisIsAModule.js"></script>
+    <!--This module will never run:-->
+    <script type="module" src="thisIsAModule.js"></script>
     <script nomodule src="iAmNoModule.js"></script>
     <script>
       a();
